# docbasePy

./: .gitignore  README.md  pyproject.toml
src/docbase/: files.py  infos.py  state.py
src/indexer/: __init__.py  preparing.py  server.py
src/view/: __init__.py  client.py  streamlit.py
